Fix incorrect paranthesis placement.

--- a/scripts/buildbot/master.cfg
+++ b/scripts/buildbot/master.cfg
@@ -362,8 +362,8 @@ for test in tests:
 
 night_f.addStep(TransferTestResults(workdir='build/dbg/StandAlone',
 		slavesrc="TestResults",
-		masterdest=WithProperties("~/master/public_html/TestResults/%(buildername)s/%(buildnumber)s/dbg/")),
-		extradir="dbg"
+		masterdest=WithProperties("~/master/public_html/TestResults/%(buildername)s/%(buildnumber)s/dbg/"),
+		extradir="dbg")
 		)
 
 night_f.addStep(shell.Configure,
@@ -389,8 +389,8 @@ for test in tests:
 
 night_f.addStep(TransferTestResults(workdir='build/opt/StandAlone',
 		slavesrc="TestResults",
-		masterdest=WithProperties("~/master/public_html/TestResults/%(buildername)s/%(buildnumber)s/opt/")),
-		extradir="opt"
+		masterdest=WithProperties("~/master/public_html/TestResults/%(buildername)s/%(buildnumber)s/opt/"),
+		extradir="opt")
 		)
 
 
