--- a/src/VisIt/udaReaderMTMD/testavtudaReaderMTMDFileFormat.C.in
+++ b/src/VisIt/udaReaderMTMD/testavtudaReaderMTMDFileFormat.C.in
@@ -250,16 +250,8 @@ avtudaReaderMTMDFileFormat::avtudaReaderMTMDFileFormat(const char *filename) :
   
 
   currLevel = -1;
-  currVar.assign("any_var");
-  currMesh.assign("any_mesh");
 
   currTimeStep = -1;
-
-  ccMesh = false;
-  ncMesh = false;
-  sfcxMesh = false;
-  sfcyMesh = false;
-  sfczMesh = false;
 
   refMatrix = NULL;
   vecValMatrix = NULL;
@@ -273,7 +265,6 @@ avtudaReaderMTMDFileFormat::avtudaReaderMTMDFileFormat(const char *filename) :
   tenX = tenY = tenZ = 0;
 
   levelPatchVecPtr = NULL;
-  patchInfoVecPtr = NULL;
 
   debug5 << "Out avtudaReaderFileFormat\n";
 }
@@ -295,11 +286,13 @@ avtudaReaderMTMDFileFormat::~avtudaReaderMTMDFileFormat()
   if (levelPatchVecPtr != NULL)
     delete levelPatchVecPtr;
 
-  if (patchInfoVecPtr != NULL)
-    delete patchInfoVecPtr;     
-  
   if (udaVarsPtr != NULL)
     delete udaVarsPtr;
+
+  for (std::map<std::string,patchInfoVec*>::iterator i=meshNameToPatchInfoVec.begin();
+       i!=meshNameToPatchInfoVec.end(); ++i) {
+    delete (*i).second;
+  }
 }
 
 
@@ -363,6 +356,29 @@ avtudaReaderMTMDFileFormat::ActivateTimestep(int ts)
     delete levelPatchVecPtr;
   levelPatchVecPtr = (*getTotalNumPatches)(archive, grid);
   currTimeStep = ts; 
+
+
+  // delete any patch info that may be cached for the current time step
+  for (std::map<std::string,patchInfoVec*>::iterator i=meshNameToPatchInfoVec.begin();
+       i!=meshNameToPatchInfoVec.end(); ++i) {
+    delete (*i).second;
+  }
+  meshNameToPatchInfoVec.clear();
+}
+
+
+// ****************************************************************************
+// Method: avtudaReaderMTMDFileForma::getCachedPatchInfo
+//
+// Purpose: 
+//   Get patch info for a given mesh, at the currently active timestep
+//
+// ****************************************************************************
+patchInfoVec*
+avtudaReaderMTMDFileFormat::getCachedPatchInfo(const string &meshname) {
+  if (meshNameToPatchInfoVec.find(meshname)==meshNameToPatchInfoVec.end())
+    meshNameToPatchInfoVec[meshname] = (*getPatchInfo)(archive, grid, meshname, true);
+  return meshNameToPatchInfoVec[meshname];
 }
 
 
@@ -385,8 +401,6 @@ void
 {
   debug5 << "In Free up resources\n";
   currLevel = -1;
-  currVar.assign("any_var");
-  currMesh.assign("any_mesh");
 
   if (refMatrix != NULL) {
     for (int i = 0; i < refX; i++) {
@@ -426,11 +440,6 @@ void
 
   delete [] extraCells;
   extraCells = NULL;
-
-  if (patchInfoVecPtr !=  NULL) {
-    delete patchInfoVecPtr;
-    patchInfoVecPtr = NULL;
-  }
 }
 
 
@@ -494,7 +503,7 @@ void
     char tmpName[64];
     int level, local_patch;
 
-    GetLevelAndLocalPatchNumber(i, timeState, level, local_patch);
+    GetLevelAndLocalPatchNumber(i, level, local_patch);
     sprintf(tmpName,"level%d, patch%d", level, local_patch);
 
     groupIds[i] = level;
@@ -506,21 +515,17 @@ void
   int spatial_dimension = 3;
   int topological_dimension;
 
+
+  bool ccMesh = false;
+  bool ncMesh = false;
+  bool sfcxMesh = false;
+  bool sfcyMesh = false;
+  bool sfczMesh = false;
+
   avtMeshType mt;
   avtCentering cent;
 
   double* minMaxArr = (*getBBox)(archive, grid, 0); // level 0
-
-  double extents[6];
-
-  extents[0] = minMaxArr[0];
-  extents[1] = minMaxArr[3];
-  extents[2] = minMaxArr[1];
-  extents[3] = minMaxArr[4];
-  extents[4] = minMaxArr[2];
-  extents[5] = minMaxArr[5];
-
-
   udaVars& udaVarsObj = *(udaVarsPtr);
 
   debug5 << "Variables: " << udaVarsObj.size() << endl;
@@ -633,12 +638,6 @@ void
       }
     }   
   }
-
-  ccMesh = false;
-  ncMesh = false;
-  sfcxMesh = false;
-  sfcyMesh = false;
-  sfczMesh = false;
   
   // Nothing needs to be modifed for particle data, as they exist only on a single level
   for (int i = 0; i < udaVarsObj.size(); i++) {
@@ -782,8 +781,8 @@ void
 // ****************************************************************************
 
 void
-  avtudaReaderMTMDFileFormat::GetLevelAndLocalPatchNumber(int global_patch, int timestate, 
-                                                          int &level, int &local_patch)
+avtudaReaderMTMDFileFormat::GetLevelAndLocalPatchNumber(int global_patch, 
+                                                        int &level, int &local_patch)
 {
   levelPatchVec& levelPatchVecObj = *levelPatchVecPtr;
   int num_levels = levelPatchVecObj.size();
@@ -822,14 +821,29 @@ void
 // ****************************************************************************
 
 void
-  avtudaReaderMTMDFileFormat::CalculateDomainNesting(int timestate)
+avtudaReaderMTMDFileFormat::CalculateDomainNesting(int timestate, const std::string &meshname)
 {
+
+  //
+  // First, look to see if we don't already have it cached
+  // Note that we compute BOTH domain nesting and domain boundary
+  // information here. However, we use only existance of domain
+  // nesting object in cache as trigger for whether to compute
+  // both objects or not.
+  //
+
+  void_ref_ptr vrTmp = cache->GetVoidRef(meshname.c_str(),
+                                         AUXILIARY_DATA_DOMAIN_NESTING_INFORMATION,
+                                         timestate, -1);
+  if (*vrTmp != NULL)
+    return;
+  
+
   levelPatchVec& levelPatchVecObj = *levelPatchVecPtr;
   int num_levels = levelPatchVecObj.size();
 
-  // Call to store all patch information
-  // Patch Info Vector
-  patchInfoVec& patchInfoVecObj = *(patchInfoVecPtr);   
+  // Get the patch information
+  patchInfoVec& patchInfoVecObj = *getCachedPatchInfo(meshname);
 
   //
   // Calculate some info we will need in the rest of the routine.
@@ -884,10 +898,10 @@ void
     = new avtRectilinearDomainBoundaries(true);
   rdb->SetNumDomains(totalPatches);
 
-  if (currMesh.find("NC") != string::npos) {
+  if (meshname.find("NC") != string::npos) {
     for (int patch = 0 ; patch < totalPatches ; patch++) {
       int my_level, local_patch;
-      GetLevelAndLocalPatchNumber(patch, timestate, my_level, local_patch);
+      GetLevelAndLocalPatchNumber(patch, my_level, local_patch);
 
       int indexArr[6];
       std::memcpy(indexArr, patchInfoVecObj[patch].indexArr, sizeof(int) * 6);
@@ -930,10 +944,10 @@ void
       rdb->SetIndicesForAMRPatch(patch, my_level, e);
     }
   }
-  else if (currMesh.find("CC") != string::npos) {
+  else if (meshname.find("CC") != string::npos) {
     for (int patch = 0 ; patch < totalPatches ; patch++) {
       int my_level, local_patch;
-      GetLevelAndLocalPatchNumber(patch, timestate, my_level, local_patch);
+      GetLevelAndLocalPatchNumber(patch, my_level, local_patch);
 
       int e[6];
 
@@ -949,7 +963,7 @@ void
       rdb->SetIndicesForAMRPatch(patch, my_level, e);
     }
   }
-  else if (currMesh.find("SFC") != string::npos) {
+  else if (meshname.find("SFC") != string::npos) {
     for (int patch = 0 ; patch < totalPatches ; patch++) {
       int actualHiArr[3];
       int* hiLoArr = patchInfoVecObj[patch].hiLoArr;
@@ -958,26 +972,26 @@ void
       actualHiArr[1] = patchInfoVecObj[patch].indexArr[4];
       actualHiArr[2] = patchInfoVecObj[patch].indexArr[5];
      
-      if (currMesh.find("SFCX") != string::npos) { 
+      if (meshname.find("SFCX") != string::npos) { 
         if (actualHiArr[0] < (hiLoArr[3] - hiLoArr[0])) {
           actualHiArr[0] += 1;
         }
       }
 
-      if (currMesh.find("SFCY") != string::npos) { 
+      if (meshname.find("SFCY") != string::npos) { 
         if (actualHiArr[1] < (hiLoArr[4] - hiLoArr[1])) {
           actualHiArr[1] += 1;
         }
       }
 
-      if (currMesh.find("SFCZ") != string::npos) { 
+      if (meshname.find("SFCZ") != string::npos) { 
         if (actualHiArr[2] < (hiLoArr[5] - hiLoArr[2])) {
           actualHiArr[2] += 1;
         }
       }
 
       int my_level, local_patch;
-      GetLevelAndLocalPatchNumber(patch, timestate, my_level, local_patch);
+      GetLevelAndLocalPatchNumber(patch, my_level, local_patch);
 
       int e[6];
 
@@ -997,7 +1011,7 @@ void
   rdb->CalculateBoundaries();
   void_ref_ptr vrdb = void_ref_ptr(rdb,
                                    avtStructuredDomainBoundaries::Destruct);
-  cache->CacheVoidRef("any_mesh", AUXILIARY_DATA_DOMAIN_BOUNDARY_INFORMATION,
+  cache->CacheVoidRef(meshname.c_str(), AUXILIARY_DATA_DOMAIN_BOUNDARY_INFORMATION,
                       timestate, -1, vrdb);
 
   //
@@ -1015,7 +1029,7 @@ void
     int patches_start = levelStart[level];
     int patches_end   = levelEnd[level];
     vector<int> mP = multiplier[level];
-    if (currMesh.find("NC") != string::npos) {
+    if (meshname.find("NC") != string::npos) {
       for (int patch = patches_start ; patch < patches_end ; patch++) {
         for (int candidate = search_start ; candidate < search_end ; candidate++) {                       
           int indexArrP[6];
@@ -1100,7 +1114,7 @@ void
         }
       }
     }
-    else if (currMesh.find("CC") != string::npos) {
+    else if (meshname.find("CC") != string::npos) {
       for (int patch = patches_start ; patch < patches_end ; patch++) {
         for (int candidate = search_start ; candidate < search_end ; candidate++) {                       
           if ((patchInfoVecObj[patch].indexArr[3])*mP[0] <  patchInfoVecObj[candidate].indexArr[0]*mC[0])
@@ -1120,7 +1134,7 @@ void
         }
       }
     }
-    else if (currMesh.find("SFC") != string::npos) {
+    else if (meshname.find("SFC") != string::npos) {
       for (int patch = patches_start ; patch < patches_end ; patch++) {
         for (int candidate = search_start ; candidate < search_end ; candidate++) {                       
           int* hiLoArrP = patchInfoVecObj[patch].hiLoArr;
@@ -1134,7 +1148,7 @@ void
           a[4] = patchInfoVecObj[patch].indexArr[5];
           a[5] = patchInfoVecObj[candidate].indexArr[5];
      
-          if (currMesh.find("SFCX") != string::npos) { 
+          if (meshname.find("SFCX") != string::npos) { 
             if (a[0] < (hiLoArrP[3] - hiLoArrP[0])) {
               a[0] += 1;
             }
@@ -1143,7 +1157,7 @@ void
             }
           }
 
-          if (currMesh.find("SFCY") != string::npos) { 
+          if (meshname.find("SFCY") != string::npos) { 
             if (a[2] < (hiLoArrP[4] - hiLoArrP[1])) {
               a[2] += 1;
             }
@@ -1152,7 +1166,7 @@ void
             }
           }
 
-          if (currMesh.find("SFCZ") != string::npos) { 
+          if (meshname.find("SFCZ") != string::npos) { 
             if (a[4] < (hiLoArrP[5] - hiLoArrP[2])) {
               a[4] += 1;
             }
@@ -1185,10 +1199,10 @@ void
   // tell the structured domain boundary that information.
   //
 
-  if (currMesh.find("NC") != string::npos) {
+  if (meshname.find("NC") != string::npos) {
     for (int i = 0 ; i < totalPatches ; i++) {
       int my_level, local_patch;
-      GetLevelAndLocalPatchNumber(i, timestate, my_level, local_patch);
+      GetLevelAndLocalPatchNumber(i, my_level, local_patch);
 
       int indexArr[6];
       std::memcpy(indexArr, patchInfoVecObj[i].indexArr, sizeof(int) * 6);
@@ -1231,10 +1245,10 @@ void
       dn->SetNestingForDomain(i, my_level, childPatches[i], logExts);
     }
   }
-  else if (currMesh.find("CC")  != string::npos) {
+  else if (meshname.find("CC")  != string::npos) {
     for (int i = 0 ; i < totalPatches ; i++) {
       int my_level, local_patch;
-      GetLevelAndLocalPatchNumber(i, timestate, my_level, local_patch);
+      GetLevelAndLocalPatchNumber(i, my_level, local_patch);
 
       vector<int> logExts(6);
 
@@ -1248,7 +1262,7 @@ void
       dn->SetNestingForDomain(i, my_level, childPatches[i], logExts);
     }
   }
-  else if (currMesh.find("SFC")  != string::npos) {
+  else if (meshname.find("SFC")  != string::npos) {
     for (int i = 0 ; i < totalPatches ; i++) {
       int actualHiArr[3];
       int* hiLoArr = patchInfoVecObj[i].hiLoArr;
@@ -1257,26 +1271,26 @@ void
       actualHiArr[1] = patchInfoVecObj[i].indexArr[4];
       actualHiArr[2] = patchInfoVecObj[i].indexArr[5];
      
-      if (currMesh.find("SFCX") != string::npos) { 
+      if (meshname.find("SFCX") != string::npos) { 
         if (actualHiArr[0] < (hiLoArr[3] - hiLoArr[0])) {
           actualHiArr[0] += 1;
         }
       }
 
-      if (currMesh.find("SFCY") != string::npos) { 
+      if (meshname.find("SFCY") != string::npos) { 
         if (actualHiArr[1] < (hiLoArr[4] - hiLoArr[1])) {
           actualHiArr[1] += 1;
         }
       }
 
-      if (currMesh.find("SFCZ") != string::npos) { 
+      if (meshname.find("SFCZ") != string::npos) { 
         if (actualHiArr[2] < (hiLoArr[5] - hiLoArr[2])) {
           actualHiArr[2] += 1;
         }
       }
 
       int my_level, local_patch;
-      GetLevelAndLocalPatchNumber(i, timestate, my_level, local_patch);
+      GetLevelAndLocalPatchNumber(i, my_level, local_patch);
 
       vector<int> logExts(6);
 
@@ -1297,7 +1311,7 @@ void
   //
   dn->SetNumDimensions(3);
   void_ref_ptr vr = void_ref_ptr(dn, avtStructuredDomainNesting::Destruct);
-  cache->CacheVoidRef("any_mesh", AUXILIARY_DATA_DOMAIN_NESTING_INFORMATION,
+  cache->CacheVoidRef(meshname.c_str(), AUXILIARY_DATA_DOMAIN_NESTING_INFORMATION,
                       timestate, -1, vr);
 }
 
@@ -1334,24 +1348,19 @@ vtkDataSet *
   // volume data
   if (meshName.find("mesh_particle") == string::npos) {
 
-    if (currMesh.compare(meshName) != 0) {
-      patchInfoVecPtr = (*getPatchInfo)(archive, grid, meshname, true);
-      levelPatchVec& levelPatchVecObj = *levelPatchVecPtr;
-      int numLevels = levelPatchVecObj.size();
+    patchInfoVec& patchInfoVecObj = *getCachedPatchInfo(meshname);
 
-      currMesh.assign(meshName);
+    levelPatchVec& levelPatchVecObj = *levelPatchVecPtr;
+    int numLevels = levelPatchVecObj.size();
 
-      // if there is just a single level, there is no need to call this function
-      if (numLevels > 1) {
-        debug5 << "CalculateDomainNesting() called\n";
-        CalculateDomainNesting(timestate);
-      }
+    // if there is just a single level, there is no need to call this function
+    if (numLevels > 1) {
+      debug5 << "CalculateDomainNesting() called\n";
+      CalculateDomainNesting(timestate, meshname);
     }    
 
-    patchInfoVec& patchInfoVecObj = *(patchInfoVecPtr); 
-
     int level, local_patch;
-    GetLevelAndLocalPatchNumber(domain, timestate, level, local_patch);
+    GetLevelAndLocalPatchNumber(domain, level, local_patch);
 
     if (currLevel != level) {
       if (boundaryExists != NULL) 
@@ -1771,8 +1780,14 @@ vtkDataArray *
     
   udaVars& udaVarsObj = *(udaVarsPtr);
 
+  string varType;
+
   for (int k = 0; k < udaVarsObj.size(); k++) {
     if (udaVarsObj[k].find(varName) != string::npos) { 
+
+      size_t found = udaVarsObj[k].find("/");
+      varType = udaVarsObj[k].substr(found + 1);
+
       if (udaVarsObj[k].find("ParticleVariable") != string::npos) {
         isParticleVar = true;
         break;
@@ -1780,13 +1795,12 @@ vtkDataArray *
     }
   }
 
-
   vtkFloatArray *rv = vtkFloatArray::New();
 
   // volume data
   if (!isParticleVar) { 
     int level, local_patch;
-    GetLevelAndLocalPatchNumber(domain, timestate, level, local_patch);
+    GetLevelAndLocalPatchNumber(domain, level, local_patch);
 
     unsigned int count = 0;
 
@@ -1825,7 +1839,7 @@ vtkDataArray *
 
     timeStep &timeStepObj = *timeStepObjPtr;
     
-    patchInfoVec& patchInfoVecObj = *(patchInfoVecPtr);
+    patchInfoVec& patchInfoVecObj = *getCachedPatchInfo(varType);
 
     int indexArr[6];
     std::memcpy(indexArr, patchInfoVecObj[domain].indexArr, sizeof(int) * 6);
@@ -2001,20 +2015,20 @@ vtkDataArray *
     actualHiArr[1] = indexArr[4];
     actualHiArr[2] = indexArr[5];
 
-    if (currMesh.find("SFC") != string::npos) {
-      if (currMesh.find("SFCX") != string::npos) { 
+    if (varType.find("SFC") != string::npos) {
+      if (varType.find("SFCX") != string::npos) { 
         if (actualHiArr[0] < (hiLoArr[3] - hiLoArr[0])) {
           cellValColln_x += 1;
         }
       }
 
-      if (currMesh.find("SFCY") != string::npos) { 
+      if (varType.find("SFCY") != string::npos) { 
         if (actualHiArr[1] < (hiLoArr[4] - hiLoArr[1])) {
           cellValColln_y += 1;
         }
       }
 
-      if (currMesh.find("SFCZ") != string::npos) { 
+      if (varType.find("SFCZ") != string::npos) { 
         if (actualHiArr[2] < (hiLoArr[5] - hiLoArr[2])) {
           cellValColln_z += 1;
         }
@@ -2115,8 +2129,14 @@ vtkDataArray *
     
   udaVars& udaVarsObj = *(udaVarsPtr);
 
+  string varType;
+
   for (int k = 0; k < udaVarsObj.size(); k++) {
     if (udaVarsObj[k].find(varName) != string::npos) { 
+
+      size_t found = udaVarsObj[k].find("/");
+      varType = udaVarsObj[k].substr(found + 1);
+
       if (udaVarsObj[k].find("ParticleVariable") != string::npos) {
         isParticleVar = true;
         break;
@@ -2129,7 +2149,7 @@ vtkDataArray *
   // volume variable
   if (!isParticleVar) {
     int level, local_patch;
-    GetLevelAndLocalPatchNumber(domain, timestate, level, local_patch);
+    GetLevelAndLocalPatchNumber(domain, level, local_patch);
 
     unsigned int count = 0;
 
@@ -2150,7 +2170,7 @@ vtkDataArray *
       }
     }
 
-    patchInfoVec& patchInfoVecObj = *(patchInfoVecPtr); 
+    patchInfoVec& patchInfoVecObj = *getCachedPatchInfo(varType);
 
     int indexArr[6];
     std::memcpy(indexArr, patchInfoVecObj[domain].indexArr, sizeof(int) * 6);
@@ -2167,6 +2187,8 @@ vtkDataArray *
     indexArr[3] = indexArr[3] - hiLoArr[0]; 
     indexArr[4] = indexArr[4] - hiLoArr[1]; 
     indexArr[5] = indexArr[5] - hiLoArr[2];
+
+    int ncomps;
 
     if (timeStepObj.cellValColln != NULL) {
       cellVals& cellValColln = *(timeStepObj.cellValColln);
@@ -2504,17 +2526,17 @@ vtkDataArray *
 //    Gunther H. Weber, Tue Aug  7 16:01:28 PDT 2007
 //    Return material information
 // ****************************************************************************
-
 void *
   avtudaReaderMTMDFileFormat::GetAuxiliaryData(const char *var, int dom,
                                                const char * type, void *,
                                                DestructorFunction &df)
 {
+#if 0
   if (strcmp(type, AUXILIARY_DATA_SPATIAL_EXTENTS) == 0)
     {
       debug5 << "In GetAuxiliaryData" << endl;
 
-      patchInfoVec& patchInfoVecObj = *(patchInfoVecPtr);   
+      patchInfoVec& patchInfoVecObj = *(patchInfoVecPtr);
 
       int totalPatches = patchInfoVecObj.size();
       avtIntervalTree *itree = new avtIntervalTree(totalPatches, 3);
@@ -2540,6 +2562,7 @@ void *
 
       return ((void *) itree);
     }
+#endif
 
   return NULL;
 }
