Making Arches TabProps optional.  (For now.)
M    configure
M    configure.ac
M    configVars.mk.in
M    include/sci_defs/uintah_testdefs.h.in

Set up the #define and Make variables to be used for checking to see
if TabProps exists.  You must #include <sci_defs/uintah_defs.h> to ge
the appropiate HAVE_TABPROPS variable.

M    CCA/Components/Arches/ChemMix/sub.mk

White space fix.

M    CCA/Components/Arches/sub.mk

Only build the ChemMix subdir if TabProps is enabled.

M    CCA/Components/Arches/Properties.cc
M    CCA/Components/Arches/Properties.h

#if out TabProps stuff when TabProps is not enabled.

--- a/configVars.mk.in
+++ b/configVars.mk.in
@@ -138,8 +138,9 @@ ZOLTAN_INCLUDE = @INC_ZOLTAN_H@
 ZOLTAN_LIBRARY = @ZOLTAN_LIB_DIR_FLAG@ @ZOLTAN_LIB_FLAG@
 
 # TabProps
-TABPROPS_INCLUDE = @INC_TABPROPS_H@
-TABPROPS_LIBRARY = @TABPROPS_LIB_DIR_FLAG@ @TABPROPS_LIB_FLAG@
+TABPROPS_INCLUDE =  @INC_TABPROPS_H@
+TABPROPS_LIBRARY =  @TABPROPS_LIB_DIR_FLAG@ @TABPROPS_LIB_FLAG@
+HAVE_TABPROPS    := @HAVE_TABPROPS@
 
 HAVE_BLAS      := @HAVE_BLAS@
 HAVE_CBLAS     := @HAVE_CBLAS@
